force-app/main/default/objects/OpportunityActivity__c/OpportunityActivity__c.object-meta.xml
<CustomObject>
    <label>商談行動</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>商談行動No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>