force-app/main/default/objects/OpportunityActivity__c/fields/Calltype__c.field-meta.xml
<CustomField>
    <fullName>Calltype__c</fullName>
    <description>山本</description>
    <label>行動種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>電話接触</fullName>
            </value>
            <value>
                <fullName>コールのみ</fullName>
            </value>
            <value>
                <fullName>留守電入れ</fullName>
            </value>
            <value>
                <fullName>LINE送信</fullName>
            </value>
            <value>
                <fullName>SMS送信</fullName>
            </value>
            <value>
                <fullName>メール送信</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>随時・受信貼付</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>