force-app/main/default/objects/OpportunityActivity__c/fields/Calltype_Document__c.field-meta.xml
<CustomField>
    <fullName>Calltype_Document__c</fullName>
    <label>書類行動種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>コール</fullName>
            </value>
            <value>
                <fullName>折待ち</fullName>
            </value>
            <value>
                <fullName>再連絡</fullName>
            </value>
            <value>
                <fullName>定休日</fullName>
            </value>
            <value>
                <fullName>その他書類待ち</fullName>
            </value>
            <value>
                <fullName>取付済</fullName>
            </value>
            <value>
                <fullName>郵送中</fullName>
            </value>
            <value>
                <fullName>保留</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>