force-app/main/default/objects/OpportunityActivity__c/fields/Calltype_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Calltype_Pickup__c</fullName>
    <label>引取行動種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>コール</fullName>
            </value>
            <value>
                <fullName>折待ち</fullName>
            </value>
            <value>
                <fullName>再連絡</fullName>
            </value>
            <value>
                <fullName>定休日</fullName>
            </value>
            <value>
                <fullName>連絡済</fullName>
            </value>
            <value>
                <fullName>保留</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>