force-app/main/default/objects/OpportunityActivity__c/fields/Calltype_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Calltype_Transfer__c</fullName>
    <label>振込行動種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>コール</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>