force-app/main/default/objects/OpportunityActivity__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <inlineHelpText>Case_OpportunityActivity</inlineHelpText>
    <label>買取受付</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipLabel>商談行動</relationshipLabel>
    <relationshipName>Case_OpportunityActivity</relationshipName>
    <type>Lookup</type>
</CustomField>