force-app/main/default/objects/OpportunityActivity__c/fields/CasePurpose__c.field-meta.xml
<CustomField>
    <fullName>CasePurpose__c</fullName>
    <description>山本</description>
    <label>受付目的</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>初回商談</fullName>
            </value>
            <value>
                <fullName>保留商談</fullName>
            </value>
            <value>
                <fullName>商談以外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>