force-app/main/default/objects/OpportunityActivity__c/fields/CasePurposeCS__c.field-meta.xml
<CustomField>
    <fullName>CasePurposeCS__c</fullName>
    <description>山本</description>
    <label>CS目的</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>引取関連</fullName>
            </value>
            <value>
                <fullName>書類関連</fullName>
            </value>
            <value>
                <fullName>振込関連</fullName>
            </value>
            <value>
                <fullName>CSその他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>