force-app/main/default/objects/OpportunityActivity__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>山本</description>
    <formula>IF( CONTAINS( CreatedBy.UserRole.Name , &quot;マネージャ&quot;), SUBSTITUTE(CreatedBy.UserRole.Name, &quot;マネージャ&quot;,&quot;&quot;) ,CreatedBy.UserRole.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>部署(数式)</label>
    <type>Text</type>
</CustomField>