force-app/main/default/objects/OpportunityActivity__c/fields/Desired_amount__c.field-meta.xml
<CustomField>
    <fullName>Desired_amount__c</fullName>
    <description>山本</description>
    <label>売り予想</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>