force-app/main/default/objects/OpportunityActivity__c/fields/InChargeOf_Pricing_Picklist__c.field-meta.xml
<CustomField>
    <fullName>InChargeOf_Pricing_Picklist__c</fullName>
    <description>山本</description>
    <label>値付担当</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>足立</fullName>
            </value>
            <value>
                <fullName>木野</fullName>
            </value>
            <value>
                <fullName>中</fullName>
            </value>
            <value>
                <fullName>阿部</fullName>
            </value>
            <value>
                <fullName>坂口</fullName>
            </value>
            <value>
                <fullName>宮定</fullName>
            </value>
            <value>
                <fullName>上田</fullName>
            </value>
            <value>
                <fullName>福田</fullName>
            </value>
            <value>
                <fullName>藪内</fullName>
            </value>
            <value>
                <fullName>田中</fullName>
            </value>
            <value>
                <fullName>熊谷</fullName>
            </value>
            <value>
                <fullName>森田</fullName>
            </value>
            <value>
                <fullName>細川</fullName>
            </value>
            <value>
                <fullName>柏木</fullName>
            </value>
            <value>
                <fullName>窪田</fullName>
            </value>
            <value>
                <fullName>渡部</fullName>
            </value>
            <value>
                <fullName>嶋田</fullName>
            </value>
            <value>
                <fullName>橋本</fullName>
            </value>
            <value>
                <fullName>奥井</fullName>
            </value>
            <value>
                <fullName>佐藤(寛)</fullName>
                <isActive>false</isActive>
                <label>佐藤(寛)</label>
            </value>
            <value>
                <fullName>前田</fullName>
                <isActive>false</isActive>
                <label>前田</label>
            </value>
            <value>
                <fullName>北條</fullName>
                <isActive>false</isActive>
                <label>北條</label>
            </value>
            <value>
                <fullName>新枦</fullName>
                <isActive>false</isActive>
                <label>新枦</label>
            </value>
            <value>
                <fullName>森</fullName>
                <isActive>false</isActive>
                <label>森</label>
            </value>
            <value>
                <fullName>池田麻由</fullName>
                <isActive>false</isActive>
                <label>池田麻由</label>
            </value>
            <value>
                <fullName>浅野</fullName>
                <isActive>false</isActive>
                <label>浅野</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>