force-app/main/default/objects/OpportunityActivity__c/fields/LiabilityAttachmentAnother__c.field-meta.xml
<CustomField>
    <fullName>LiabilityAttachmentAnother__c</fullName>
    <defaultValue>false</defaultValue>
    <description>山本</description>
    <label>自賠責別</label>
    <type>Checkbox</type>
</CustomField>