force-app/main/default/objects/OpportunityActivity__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <description>山本</description>
    <label>旧メモ・ネクストアクション</label>
    <type>TextArea</type>
</CustomField>