force-app/main/default/objects/OpportunityActivity__c/fields/Memo_NextAcction__c.field-meta.xml
<CustomField>
    <fullName>Memo_NextAcction__c</fullName>
    <description>山本</description>
    <label>メモ・ネクストアクション</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>