force-app/main/default/objects/OpportunityActivity__c/fields/Next_contact_date__c.field-meta.xml
<CustomField>
    <fullName>Next_contact_date__c</fullName>
    <label>次回連絡日</label>
    <type>Date</type>
</CustomField>