force-app/main/default/objects/OpportunityActivity__c/fields/Next_Contact_Daytime__c.field-meta.xml
<CustomField>
    <fullName>Next_Contact_Daytime__c</fullName>
    <description>佐野
営業A案件用の次回接触日
次回連絡日と似た項目だが、リユースと営業側で重複するため別で作成。</description>
    <label>次回接触日時</label>
    <type>DateTime</type>
</CustomField>