force-app/main/default/objects/OpportunityActivity__c/fields/NoContact__c.field-meta.xml
<CustomField>
    <fullName>NoContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>佐野</description>
    <label>未接触</label>
    <type>Checkbox</type>
</CustomField>