force-app/main/default/objects/OpportunityActivity__c/fields/Opportunity_Approver__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>佐野</description>
    <label>決裁者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunityActivityApprover</relationshipName>
    <type>Lookup</type>
</CustomField>