force-app/main/default/objects/OpportunityActivity__c/fields/OpportunityActivity_Department__c.field-meta.xml
<CustomField>
    <fullName>OpportunityActivity_Department__c</fullName>
    <description>唄</description>
    <label>部署</label>
    <length>20</length>
    <type>Text</type>
</CustomField>