force-app/main/default/objects/OpportunityActivity__c/fields/Owner_fullname__c.field-meta.xml
<CustomField>
    <fullName>Owner_fullname__c</fullName>
    <description>山本</description>
    <formula>Owner:User.LastName&amp;&quot; &quot;&amp; Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner_fullname</label>
    <type>Text</type>
</CustomField>