force-app/main/default/objects/OpportunityActivity__c/fields/OwnerChangeConditions__c.field-meta.xml
<CustomField>
    <fullName>OwnerChangeConditions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>山本</description>
    <label>名変条件</label>
    <type>Checkbox</type>
</CustomField>