force-app/main/default/objects/OpportunityActivity__c/fields/ProposedPrice__c.field-meta.xml
<CustomField>
    <fullName>ProposedPrice__c</fullName>
    <description>山本</description>
    <label>提示金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>