force-app/main/default/objects/OpportunityActivity__c/fields/PurchaseOpportunity__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>買取商談</label>
    <referenceTo>PurchaseOpportunity__c</referenceTo>
    <relationshipLabel>商談行動</relationshipLabel>
    <relationshipName>OpportunityActivity</relationshipName>
    <type>Lookup</type>
</CustomField>