force-app/main/default/objects/OpportunityActivity__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>山本</description>
    <label>目的</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>金額初回提示(電話)</fullName>
            </value>
            <value>
                <fullName>金額初回提示(電話以外)</fullName>
            </value>
            <value>
                <fullName>金額再提示(電話)</fullName>
            </value>
            <value>
                <fullName>金額再提示(電話以外)</fullName>
            </value>
            <value>
                <fullName>保留後追い</fullName>
            </value>
            <value>
                <fullName>現地商談</fullName>
            </value>
            <value>
                <fullName>初回TEL(toC)</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>金額提示（電話以外）</fullName>
                <isActive>false</isActive>
                <label>金額提示（電話以外）</label>
            </value>
            <value>
                <fullName>金額提示（電話）</fullName>
                <isActive>false</isActive>
                <label>金額提示（電話）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>