force-app/main/default/objects/OpportunityActivity__c/fields/retail_event_type__c.field-meta.xml
<CustomField>
    <fullName>retail_event_type__c</fullName>
    <label>リテール_行動種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>対面</fullName>
            </value>
            <value>
                <fullName>電話</fullName>
            </value>
            <value>
                <fullName>メッセージ</fullName>
            </value>
            <value>
                <fullName>訪問</fullName>
            </value>
            <value>
                <fullName>未接触</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>