force-app/main/default/objects/OpportunityActivity__c/fields/retail_opportunity__c.field-meta.xml
<CustomField>
    <fullName>retail_opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>リテール商談</label>
    <referenceTo>RetailOpportunity__c</referenceTo>
    <relationshipLabel>商談行動</relationshipLabel>
    <relationshipName>opportunity_event</relationshipName>
    <type>Lookup</type>
</CustomField>