force-app/main/default/objects/OpportunityActivity__c/fields/retail_purpose__c.field-meta.xml
<CustomField>
    <fullName>retail_purpose__c</fullName>
    <label>リテール_目的</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>買取金額提示</fullName>
            </value>
            <value>
                <fullName>買取金額再提示</fullName>
            </value>
            <value>
                <fullName>ヒアリング</fullName>
            </value>
            <value>
                <fullName>小売提案</fullName>
            </value>
            <value>
                <fullName>後追い</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>