force-app/main/default/objects/OpportunityActivity__c/fields/SalesManagement__c.field-meta.xml
<CustomField>
    <fullName>SalesManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>営業管理</label>
    <referenceTo>SalesManagement__c</referenceTo>
    <relationshipLabel>商談行動</relationshipLabel>
    <relationshipName>OppoActivity_SalesManagement</relationshipName>
    <type>Lookup</type>
</CustomField>