force-app/main/default/objects/OpportunityActivity__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <description>山本</description>
    <label>開始日時</label>
    <type>DateTime</type>
</CustomField>