force-app/main/default/objects/OpportunityActivity__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>山本</description>
    <formula>TEXT( HOUR( TIMEVALUE( StartDateTime__c ) ) + 9 ) &amp; &quot;:&quot; &amp; IF( MINUTE( TIMEVALUE( StartDateTime__c ) ) &lt; 10 , &quot;0&quot; &amp; TEXT( MINUTE( TIMEVALUE( StartDateTime__c ) ) ) , TEXT( MINUTE( TIMEVALUE( StartDateTime__c ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>開始時間</label>
    <type>Text</type>
</CustomField>