force-app/main/default/objects/OpportunityActivity__c/fields/TaxExcluded__c.field-meta.xml
<CustomField>
    <fullName>TaxExcluded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>山本</description>
    <label>税別</label>
    <type>Checkbox</type>
</CustomField>