force-app/main/default/objects/OpportunityActivity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>PurchaseOpportunity__c</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>